--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             <!--💡UPDATE: Add your social media links and CV file-->
             <a href="www.linkedin.com/in/mumbia-yvonne" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Yvonne-Analyst" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://github.com/Yvonne-Analyst/Yvonne-Analyst.github.io" target="_blank" title="Portfolio"><i class="fab fa-youtube"></i></a>
             <a href="assets/Data-Analyst_Mumbia-Yvonne_Resume.pdf" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
         </div>
     </div>
@@ -76,17 +75,17 @@
 
             <!--💡UPDATE: Replace this with your own project. Add as many as you like!-->
             <!-- Project 1 -->
-             <div class="project-card">
+             <div class="Project-Card">
                 <!--💡UPDATE: Add a preview image of your project to assets/images/ -->
                 <img src="assets/images/project-placeholder-1.jpg" alt="Project One Preview">
                 <div class="project-card-content">
-                    <h3>Project Title One</h3>
-                    <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
+                    <h3>BlinkIt Online Grocery and Meal App(India)</h3>
+                    <p>Built a dynamic Excel-based Blinkit sales dashboard to uncover key business insights across outlets and product categories, leveraging pivot tables, Excel formulas, and interactive slicers for decision support..</p>
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
-                        <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/Yvonne-Analyst/EXCEL-PROJECTS#blinkit-grocery-project" target="_blank" class="btn">Documentation</a>
                         <!--💡UPDATE: Add link to your live dashboard (e.g., Power BI, Tableau Public)-->
-                        <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Yvonne-Analyst/EXCEL-PROJECTS/blob/main/Blinkit%20App%20Dashboard.PNG" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
             </div>
