--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- Project 1 -->
              <div class="Project-Card">
                 <!--💡UPDATE: Add a preview image of your project to assets/images/ -->
-                <img src="Blinkit App Dashboard.PNG" alt="Blinkit Excel Sales Dashboard">
+                <img src="https://github.com/Yvonne-Analyst/EXCEL-PROJECTS/blob/main/Blinkit%20App%20Dashboard.PNG" alt="Blinkit Excel Sales Dashboard">
                 <div class="project-card-content">
                     <h3>BlinkIt Online Grocery and Meal App(India)</h3>
                     <p>Built a dynamic Excel-based Blinkit sales dashboard to uncover key business insights across outlets and product categories, leveraging pivot tables, Excel formulas, and interactive slicers for decision support..</p>
