--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- Project 1 -->
              <div class="Project-Card">
                 <!--💡UPDATE: Add a preview image of your project to assets/images/ -->
-                <img src="assets/images/https://github.com/Yvonne-Analyst/EXCEL-PROJECTS/blob/main/Blinkit%20App%20Dashboard.PNG" alt="BlinkIt Dashboard Preview">
+                <img src="blinkit-dashboard.png" alt="BlinkIt Dashboard Preview">
                 <div class="project-card-content">
                     <h3>BlinkIt Online Grocery and Meal App(India)</h3>
                     <p>Built a dynamic Excel-based Blinkit sales dashboard to uncover key business insights across outlets and product categories, leveraging pivot tables, Excel formulas, and interactive slicers for decision support..</p>
@@ -85,7 +85,7 @@
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
                         <a href="https://github.com/Yvonne-Analyst/EXCEL-PROJECTS#blinkit-grocery-project" target="_blank" class="btn">Documentation</a>
                         <!--💡UPDATE: Add link to your live dashboard (e.g., Power BI, Tableau Public)-->
-                        <a href="https://github.com/Yvonne-Analyst/EXCEL-PROJECTS/blob/main/Blinkit%20App%20Dashboard.PNG" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Yvonne-Analyst/EXCEL-PROJECTS/blob/main/blinkit-dashboard.png" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
             </div>
