--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- Project 1 -->
              <div class="Project-Card">
                 <!--💡UPDATE: Add a preview image of your project to assets/images/ -->
-                <img src="blinkit-dashboard.png" alt="BlinkIt Dashboard Preview">
+                <img src="assets/images/blinkit-dashboard..PNG" alt="BlinkIt Dashboard Preview">
                 <div class="project-card-content">
                     <h3>BlinkIt Online Grocery and Meal App(India)</h3>
                     <p>Built a dynamic Excel-based Blinkit sales dashboard to uncover key business insights across outlets and product categories, leveraging pivot tables, Excel formulas, and interactive slicers for decision support..</p>
