--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@
 
             <!-- Project 2 -->
             <div class="project-card">
-                <img src="assets/images/project-placeholder-2.jpg" alt="Project Two Preview">
+                <img src="assets/images/healthcare.PNG" alt="HealthCare Patient Wait List ">
                 <div class="project-card-content">
                     <h3>Project Title Two</h3>
-                    <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
+                    <p>Built an interactive dashboard to track current patient waiting lists, analyze historical inpatient and outpatient trends, and identify specialty- and age-based bottlenecks to support healthcare decision-making.
+Tools used: Power BI, DAX, Excel (data modeling & visualization)..</p>
                     <div class="project-buttons">
-                        <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
-                        <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Yvonne-Analyst/HealthCare-Data#healthcare-data--patient-wait-list" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/Yvonne-Analyst/HealthCare-Data/blob/main/healthcare.PNG" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
             </div>
