--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="project-card">
                 <img src="assets/images/healthcare.PNG" alt="HealthCare Patient Wait List ">
                 <div class="project-card-content">
-                    <h3>Project Title Two</h3>
+                    <h3>HealthCare -Patient Waiting List</h3>
                     <p>Built an interactive dashboard to track current patient waiting lists, analyze historical inpatient and outpatient trends, and identify specialty- and age-based bottlenecks to support healthcare decision-making.
 Tools used: Power BI, DAX, Excel (data modeling & visualization)..</p>
                     <div class="project-buttons">
