--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@ Tools used: Power BI, DAX, Excel (data modeling & visualization)..</p>
                 <img src="assets/images/project-placeholder-3.jpg" alt="Project Three Preview">
                 <div class="project-card-content">
                     <h3>Project Title Three</h3>
-                    <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
+                    <p>Analyzed community-level water access data to identify gaps in availability, distance, and quality of water sources, supporting evidence-based planning for improved water infrastructure.
+Tools used: SQL, Excel, Power BI (data analysis & visualization).</p>
                     <div class="project-buttons">
-                        <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
-                        <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Yvonne-Analyst/POWER-BI-SQL-PROJECTS#maji-ndogo-transforming-data-into-action" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/Yvonne-Analyst/POWER-BI-SQL-PROJECTS/blob/main/Maji%20Ndogo.PNG" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
             </div>
