--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Tools used: Power BI, DAX, Excel (data modeling & visualization)..</p>
 
             <!-- Project 3 -->
             <div class="project-card">
-                <img src="assets/images/project-placeholder-3.jpg" alt="Project Three Preview">
+                <img src="assets/images/Maji Ndogo.PNG" alt="Maji Ndogo Water Project">
                 <div class="project-card-content">
                     <h3>Project Title Three</h3>
                     <p>Analyzed community-level water access data to identify gaps in availability, distance, and quality of water sources, supporting evidence-based planning for improved water infrastructure.
