--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       
     <!--💡UPDATE: Add your favicon here. You can generate one at realfavicongenerator.net-->
     <link rel="icon" type="image/png" href="/favicon-32x32.svg">
-    <link rel="apple-touch-icon" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="/favicon-32x32.svg">
     
     <!-- Google Fonts for Elegant Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,7 +57,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <!--💡UPDATE: Change the image to your own profile photo in assets/images/-->
-            <img src="assets/images/profile-placeholder.jpg" alt="Your Name" class="profile-photo">
+            <img src="assets/images/20241031092048_IMG_9628.JPG.jpg" alt="Your Name" class="profile-photo">
             <div class="about-text">
                 <!--💡UPDATE: Write your own 'About Me' text here-->
                 <p> I'm a data professional with expertise in transforming complex datasets into actionable insights. My work focuses on creating interactive visualizations and data-driven stories that help organizations make informed decisions.</p>
