--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Tools used: Power BI, DAX, Excel (data modeling & visualization)..</p>
             <div class="project-card">
                 <img src="assets/images/Maji Ndogo.PNG" alt="Maji Ndogo Water Project">
                 <div class="project-card-content">
-                    <h3>Maji Ndogo Project</h3>
+                    <h3>Maji Ndogo Water Project</h3>
                     <p>Analyzed community-level water access data to identify gaps in availability, distance, and quality of water sources, supporting evidence-based planning for improved water infrastructure.
 Tools used: SQL, Excel, Power BI (data analysis & visualization).</p>
                     <div class="project-buttons">
